# act-prm-tinker

./: README.md  main.py  pyproject.toml
chat_templates/: qwen3_4b_inst_2507.jinja  qwen3_8b.jinja
configs/environments/browsecomp_plus/: search.yaml
configs/environments/hotpotqa_mc/: fewshot2.yaml
configs/environments/longbench_v2/: default.yaml
configs/generator/: default.yaml  grpo.yaml
configs/model/: hf_qwen3_4b_inst_2507.yaml
configs/replay_buffer/: default.yaml
configs/trainer/: qwen3_4b_pg.yaml
src/act_prm/environments/: __init__.py  base.py  types.py
src/act_prm/environments/act_prm/: __init__.py  env.py  env_action_first.py  utils.py
src/act_prm/environments/browsecomp_plus/: __init__.py  data_download.py  env.py  env_async.py  utils.py
src/act_prm/environments/hotpotqa_mc/: __init__.py  env.py  prompts.py  tools.py  utils.py
src/act_prm/environments/longbench_v2/: __init__.py  env.py  prompts.py  utils.py
src/act_prm/environments/longbench_v2/tools/: scroll.py  (+2 more)
src/act_prm/generator/: __init__.py  act_prm_utils.py  tinker.py  tinker_act_prm.py  tinker_act_prompt_aprm.py  tinker_grpo.py  utils_display.py
src/act_prm/graders/: __init__.py  qa.py
src/act_prm/llm_handlers/: __init__.py  action_utils.py  base.py  huggingface.py  openai.py  tinker.py  types.py
src/act_prm/replay_buffer/: __init__.py  base.py  types.py  utils.py
src/act_prm/setup/: __init__.py  args.py  logging.py  utils.py
src/act_prm/trainer/: act_prm.py  eval.py  rl.py  train.py  utils.py
src/act_prm/trainer/tinker/: __init__.py  metrics.py  update.py  utils.py
(+4 files in other folders)
